<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

     <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_header"
        android:textColor="#00FF7F"
        android:marqueeRepeatLimit="2"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
    
    
    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_list"
        android:textColor="#EEEE00"
        android:id="@+id/book_list"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>
    
    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_member"
        android:textColor="#EEEE00"
        android:id="@+id/add_member"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"/> 
        
       <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_book"
        android:textColor="#EEEE00"
        android:id="@+id/add_book"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"/> 
    
	 </LinearLayout>
   
     <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">
     
     <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:text="@string/check_out"
        android:textColor="#EEEE00"
        android:id="@+id/check_out"/>

    
    <Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textColor="#EEEE00"
        android:text="@string/check_in"
        android:id="@+id/check_in"/>
    
    </LinearLayout>
      
</LinearLayout>